# XPAND.Server/Controllers/AccountController.cs
@@ -1,6 +1,7 @@
 ﻿using Microsoft.AspNetCore.Identity;
 using Microsoft.AspNetCore.Mvc;
 using XPAND.Server.Models;
+using XPAND.Server.Models.DTOs;
 using XPAND.Server.Services;
 
 namespace XPAND.Server.Controllers
@@ -15,6 +16,19 @@ namespace XPAND.Server.Controllers
         public AccountController(IUserService userService, SignInManager<AppUser> signInManager)
         {
             _userService = userService;
+        }
+
+        [HttpPost("login")]
+        public async Task<ActionResult<UserDto>> Login([FromBody] LoginDto loginDto)
+        {
+            var user = await _userService.LoginUserAsync(loginDto.UserName, loginDto.Password);
+
+            if (user == null)
+            {
+                return Unauthorized();
+            }
+
+            return Ok(user);
         }
     }
 }
